# StyleTransferGS

./: README.md
splatfactoStyle/: pyproject.toml
splatfactoStyle/nerfstudio/scripts/: exporter.py
splatfactoStyle/splatfactoStyle/: model.py  splatfactoStyle_config.py
splatfactoStyle/splatfactoStyle/utils/: loss_utils.py
